# MachineLearningSuite

./: CMakeLists.txt  README.md  main.cxx
MLSuite/: CMakeLists.txt  README.md  files.cmake
MLSuite/depends/yaml-cpp/: CMakeLists.txt
MLSuite/include/: MLSuiteClassification.h  MLSuiteClassifierBase.h  MLSuiteClassifierSVM.h  MLSuiteProcessing.h
MLSuite/src/: MLSuiteClassification.cpp  MLSuiteClassifierBase.cpp  MLSuiteClassifierSVM.cpp
data/: features2.csv  labels2.csv  train_svm_lin.yml
depends/CmdParser/: CMakeLists.txt
